--- a/lib/gits_web/components/dashboard/main_header.html.heex
+++ b/lib/gits_web/components/dashboard/main_header.html.heex
@@ -5,7 +5,7 @@
   >
     <.icon name="hero-bars-3" />
   </button>
-  <div class="pt-0.5 lg:pt-16">
-    <h1 class="text-3xl font-bold"><%= @title %></h1>
+  <div class="w-full overflow-hidden pt-0.5 lg:pt-16">
+    <h1 class="truncate text-3xl font-bold"><%= @title %></h1>
   </div>
 </header>
