--- a/lib/gits_web/controllers/event_html/settings.html.heex
+++ b/lib/gits_web/controllers/event_html/settings.html.heex
@@ -76,36 +76,26 @@
     <div class="rounded-2xl border p-4 lg:p-12">
       <div class="flex items-center justify-between">
         <h2 class="font-poppins text-xl font-medium">Graphics</h2>
-        <.link
-          href={
-            ~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["event_id"]}/edit"
-          }
-          class="flex gap-2 items-center"
-        >
-          <span></span>
-          <!-- <.icon name="hero-arrow-right-mini" /> -->
-        </.link>
       </div>
 
       <dl class="divide-y divide-gray-100">
         <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-          <dt class="text-sm font-medium text-gray-900">Name</dt>
-          <dd class="mt-1 grid flex-wrap gap-4 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 sm:flex">
-            <div class="aspect-[4/5] h-64 bg-gray-200 p-4"></div>
-            <div class="">
-              <span>Upload</span>
+          <dt class="text-sm font-medium text-gray-900">Listing image</dt>
+          <dd class="mt-1 grid flex-wrap items-start gap-4 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 sm:flex">
+            <div class="aspect-[4/5] h-64 rounded-xl bg-gray-200">
+              <img src="/images/placeholder.png" alt="" class="h-full w-full object-cover" />
             </div>
-          </dd>
-        </div>
-      </dl>
-
-      <dl class="divide-y divide-gray-100">
-        <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-          <dt class="text-sm font-medium text-gray-900">Name</dt>
-          <dd class="mt-1 grid flex-wrap gap-4 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0 sm:flex">
-            <div class="aspect-[3/2] h-48 bg-gray-200 p-4"></div>
-            <div class="">
-              <span>Upload</span>
+            <div class="min-w-xs flex grow gap-4 sm:justify-end">
+              <button
+                class="flex rounded-xl p-2 hover:bg-gray-100"
+                phx-click={
+                  Phoenix.LiveView.JS.navigate(
+                    ~p"/accounts/#{@conn.params["account_id"]}/events/#{@conn.params["event_id"]}/upload/listing"
+                  )
+                }
+              >
+                <.icon name="hero-pencil-square" />
+              </button>
             </div>
           </dd>
         </div>
