--- a/lib/gits_web/controllers/email_html/magic_link.html.heex
+++ b/lib/gits_web/controllers/email_html/magic_link.html.heex
@@ -1,14 +1,26 @@
 <.layout>
-  <h1 class="text-2xl font-semibold py-4">Hey! Welcome back!</h1>
-  <p class="text-zinc-700 text-sm py-4">
-    To finish signing in, click the button below. If you did not request this email, you can safely ignore it.
+  <div role="separator" style="line-height: 24px">&zwj;</div>
+  <h1 style="margin: 0 0 24px; font-size: 24px; line-height: 32px; font-weight: 600; color: #18181b">
+    Hey! Welcome back!
+  </h1>
+  <p style="margin: 0 0 24px; font-size: 14px; color: #52525b">
+    To finish signin in, click the button below. If you did not request this email, you can safely ignore it.
   </p>
-
-  <.link
-    href={static_url(GitsWeb.Endpoint, "/auth/user/magic_link/?token=#{@token}")}
-    target="_blank"
-    class="bg-zinc-950 px-4 py-2 font-semibold rounded-lg inline-flex text-sm text-white"
-  >
-    Sign in
-  </.link>
+  <div>
+    <a
+      href={url(GitsWeb.Endpoint, ~p"/auth/user/magic_link?token=#{@token}")}
+      style="margin: 0 0 24px; display: inline-block; border-radius: 8px; background-color: #09090b; padding: 8px 16px; font-size: 14px; font-weight: 600; color: #fafafa; text-decoration: none"
+      class="hover-bg-zinc-800"
+    >
+      <!--[if mso]>
+      <i style="mso-font-width: 150%; mso-text-raise: 30px" hidden>&emsp;</i>
+    <![endif]-->
+      <span style="mso-text-raise: 16px">
+        Sign in
+      </span>
+      <!--[if mso]>
+      <i hidden style="mso-font-width: 150%">&emsp;&#8203;</i>
+    <![endif]-->
+    </a>
+  </div>
 </.layout>
